[package]
name = "runtime"
version = "0.1.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.61"
serde_derive = "1.0.123"
serde = "1.0.123"
tokio = { version = "1", features = ["sync", "test-util", "rt", "macros", "rt-multi-thread"] }
log = "0.4.13"
env_logger = "0.9.0"
async-trait = "0.1.51"